intel/dev: Detect what is the kernel mode driver loaded
Intel GPUs will have a new kernel mode driver, support for some
platforms will overlap so we will need to detect in runtime what is
the kernel mode driver loaded for each device.

Reviewed-by: Marcin Ślusarz <marcin.slusarz@intel.com>
Signed-off-by: José Roberto de Souza <jose.souza@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/20773>

--- a/src/intel/dev/meson.build
+++ b/src/intel/dev/meson.build
@@ -29,6 +29,8 @@ files_libintel_dev = files(
   'intel_device_info.h',
   'intel_hwconfig.c',
   'intel_hwconfig.h',
+  'intel_kmd.c',
+  'intel_kmd.h',
 )
 
 libintel_dev = static_library(
