android: Make libbacktrace optional again
For the same reason why we used to have USE_LIBBACKTRACE with the old
Android makefiles, allow to build Mesa without linking to it.

In recent VNDK versions, libbacktrace isn't available.

When building without linking libbacktrace, for some reason some symbols
related to C++ exception handling are exposed. Allow them in the symbols
check script.

Signed-off-by: Tomeu Vizoso <tomeu.vizoso@collabora.com>
Signed-off-by: Helen Koike <helen.koike@collabora.com>
Reviewed-by: Sergi Blanch Torné <sergi.blanch.torne@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/20019>

--- a/meson.build
+++ b/meson.build
@@ -823,6 +823,19 @@ if with_android_stub and not with_platform_android
   error('`-D android-stub=true` makes no sense without `-D platforms=android`')
 endif
 
+if get_option('android-libbacktrace') == 'auto'
+  with_libbacktrace = with_platform_android
+else
+  with_libbacktrace = get_option('android-libbacktrace') == 'true'
+  if with_libbacktrace and not with_platform_android
+    error('`-D android-libbacktrace=true` makes no sense without `-D platforms=android`')
+  endif
+endif
+
+if with_libbacktrace
+  cpp_args += '-DWITH_LIBBACKTRACE'
+endif
+
 if with_platform_android
   dep_android_mapper4 = null_dep
   if not with_android_stub
@@ -830,8 +843,10 @@ if with_platform_android
       dependency('cutils'),
       dependency('hardware'),
       dependency('sync'),
-      dependency('backtrace')
     ]
+    if with_libbacktrace
+      dep_android += dependency('backtrace')
+    endif
     if get_option('platform-sdk-version') >= 26
       dep_android += dependency('nativewindow')
     endif
