--- a/.gitlab-ci/container/gitlab-ci.yml
+++ b/.gitlab-ci/container/gitlab-ci.yml
@@ -174,6 +174,8 @@ debian/android_build:
     - .use-debian/x86_build-base
   variables:
     MESA_IMAGE_TAG: &debian-android_build ${DEBIAN_BUILD_TAG}
+    ANDROID_SDK_VERSION: 29
+    ANDROID_NDK: android-ndk-r21d
 
 .use-debian/android_build:
   extends:
