glapi: move files specific to shared-glapi into the shared-glapi subdirectory
Acked-by: Adam Jackson <ajax@redhat.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21777>

--- a/src/mapi/shared-glapi/meson.build
+++ b/src/mapi/shared-glapi/meson.build
@@ -18,13 +18,13 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-files_mapi_glapi = files(
+files_shared_glapi = files(
   '../entry.c',
-  '../mapi_glapi.c',
-  '../stub.c',
-  '../stub.h',
-  '../table.c',
-  '../table.h',
+  'glapi.c',
+  'stub.c',
+  'stub.h',
+  'table.c',
+  'table.h',
 )
 
 shared_glapi_mapi_tmp_h = custom_target(
@@ -43,7 +43,7 @@ endif
 
 libglapi = shared_library(
   'glapi',
-  [files_mapi_glapi, files_mapi_util, shared_glapi_mapi_tmp_h],
+  [files_shared_glapi, files_mapi_util, shared_glapi_mapi_tmp_h],
   c_args : [
     _glapi_c_args,
     c_msvc_compat_args,
