glapi: inline the meson list files_mapi_util
so that people can easily tell where these files are used by searching
for the file names in the meson files.

Acked-by: Adam Jackson <ajax@redhat.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21777>

--- a/src/mapi/glapi/meson.build
+++ b/src/mapi/glapi/meson.build
@@ -55,6 +55,10 @@ if with_platform_windows
   static_glapi_args += ['-D_GDI32_', '-DKHRONOS_DLL_EXPORTS', '-D_GLAPI_DLL_EXPORTS']
 endif
 static_glapi_files += files(
+  '../u_current.c',
+  '../u_current.h',
+  '../u_execmem.c',
+  '../u_execmem.h',
   'glapi_dispatch.c',
   'glapi_entrypoint.c',
   'glapi_getproc.c',
@@ -63,7 +67,6 @@ static_glapi_files += files(
   'glapi.h',
   'glapi_priv.h',
 )
-static_glapi_files += files_mapi_util
 static_glapi_files += [
   glapitable_h, glapi_mapi_tmp_h, glprocs_h, glapitemp_h,
 ]
