freedreno/ci: Switch a630 jobs over to manual
The a630 runners are not responding atm, so switch the jobs to manual
for the time being.

Note the other fd-farm runners are responding fine, which is why I
didn't take the entire farm offline.

Signed-off-by: Rob Clark <robdclark@chromium.org>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/20715>

--- a/src/freedreno/ci/gitlab-ci.yml
+++ b/src/freedreno/ci/gitlab-ci.yml
@@ -178,6 +178,7 @@ a618_gl:
 .a630-test:
   extends:
     - .freedreno-test
+    - .test-manual-mr
   variables:
     FDO_CI_CONCURRENT: 10
     BM_KERNEL: /baremetal-files/cheza-kernel
@@ -225,7 +226,7 @@ a630_skqp:
     - .baremetal-deqp-test
     - .a630-test
     # SKQP tests both the GL and VK drivers.
-    - .freedreno-turnip-rules
+    #- .freedreno-turnip-rules
   variables:
     HWCI_START_XORG: 1
     DEQP_SUITE: freedreno-a630-skqp
@@ -234,7 +235,7 @@ a630_vk:
   extends:
     - .a630-test
     - .baremetal-deqp-test-freedreno-vk
-    - .turnip-rules
+    #- .turnip-rules
   variables:
     DEQP_SUITE: freedreno-a630-vk
 
@@ -256,7 +257,7 @@ a630_vk_asan:
     - .a630-test
     - .baremetal-deqp-test-freedreno-vk
     - .baremetal-arm64-asan-test
-    - .turnip-rules
+    #- .turnip-rules
   variables:
     DEQP_SUITE: freedreno-a630-vk-asan
     FDO_CI_CONCURRENT: 2 # We get OOMkills if we go too wide with asan enabled
@@ -267,7 +268,7 @@ a630_piglit:
     - .piglit-test
     - .a630-test
     # Note that piglit has GL+VK integration testing.
-    - .freedreno-turnip-rules
+    #- .freedreno-turnip-rules
   variables:
     HWCI_START_XORG: 1
     PIGLIT_PROFILES: gpu
@@ -287,7 +288,7 @@ a630-traces:
 a630-traces-restricted:
   extends:
     - a630-traces
-    - .freedreno-rules-restricted
+    #- .freedreno-rules-restricted
   variables:
     PIGLIT_REPLAY_DESCRIPTION_FILE: "/install/restricted-traces-freedreno.yml"
     PIGLIT_REPLAY_EXTRA_ARGS: --keep-image --db-path ${CI_PROJECT_DIR}/replayer-db/ --minio_bucket=mesa-tracie-private --jwt-file=${CI_JOB_JWT_FILE}
