--- a/src/freedreno/ci/gitlab-ci.yml
+++ b/src/freedreno/ci/gitlab-ci.yml
@@ -184,6 +184,39 @@ a618_gl:
   variables:
     DEQP_SUITE: freedreno-a618
 
+# Run dEQP EGL window system tests separately with the window systems available.
+# X11 takes over the screen, wayland is run headless.
+a618_egl:
+  extends:
+    - .a618-test-limozeen-nots-r5
+    - .freedreno-rules
+  variables:
+    DEQP_VER: egl
+    HWCI_START_XORG: 1
+    HWCI_START_WESTON: 1
+    DEQP_SUITE: freedreno-a618-egl
+
+a618_skqp:
+  extends:
+    - .a618-test-limozeen-nots-r5
+    - .freedreno-rules
+    # SKQP tests both the GL and VK drivers.
+    - .freedreno-turnip-rules
+  variables:
+    HWCI_START_XORG: 1
+    DEQP_SUITE: freedreno-a618-skqp
+
+a618_piglit:
+  extends:
+    - .piglit-test
+    - .a618-test-limozeen-nots-r5
+    - .freedreno-rules
+    # Note that piglit has GL+VK integration testing.
+    - .freedreno-turnip-rules
+  variables:
+    HWCI_START_XORG: 1
+    PIGLIT_PROFILES: gpu
+
 .a630-test:
   extends:
     - .freedreno-test
