ci/core-manual-rules: enclose the whole condition in quotes
Quoting a condition is apparently an effective way of working around
YAML parsing weirdness. However, the quotes need to surround the whole
expression, not just parts of it.

Fixes: f6c06ef2f66a ("ci: Add manual rules variations to disable.")
Suggested-by: Michel Dänzer <mdaenzer@redhat.com>
Reviewed-by: Eric Engestrom <eric@igalia.com>
Signed-off-by: Martin Roukala (né Peres) <martin.roukala@mupuf.org>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21036>

--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -59,9 +59,9 @@
     # We only want manual jobs to show up when it's not marge's pre-merge CI
     # run, otherwise she'll wait until her timeout.  The exception is
     # performance jobs, see below.
-    - if: ('$GITLAB_USER_LOGIN == "marge-bot" &&
-           $CI_PIPELINE_SOURCE == "merge_request_event"' &&
-           $CI_JOB_NAME !~ "/performance$/")
+    - if: '($GITLAB_USER_LOGIN == "marge-bot" &&
+           $CI_PIPELINE_SOURCE == "merge_request_event" &&
+           $CI_JOB_NAME !~ "/performance$/")'
       when: never
     - !reference [.scheduled_pipeline-rules, rules]
     - changes:
