zink/ci: allow running manual jobs again on RADV
Fixes: f6c06ef2f66a ("ci: Add manual rules variations to disable.")
Reviewed-by: Emma Anholt <emma@anholt.net>
Signed-off-by: Martin Roukala (né Peres) <martin.roukala@mupuf.org>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21036>

--- a/.gitlab-ci/test-source-dep.yml
+++ b/.gitlab-ci/test-source-dep.yml
@@ -748,11 +748,11 @@
     - !reference [.turnip-rules, rules]
     - !reference [.zink-common-rules, rules]
 
-.zink-radv-rules:
+.zink-radv-manual-rules:
   stage: layered-backends
   rules:
-    - !reference [.radv-rules, rules]
-    - !reference [.zink-common-rules, rules]
+    - !reference [.radv-valve-manual-rules, rules]
+    - !reference [.zink-common-manual-rules, rules]
 
 # Unfortunately YAML doesn't let us concatenate arrays, so we have to do the
 # rules duplication manually
