intel: use c_see2_arg instead of explicit -msse2
This allows us to also inherit `-mfpmath=sse` added in previous commit.

Acked-by: Yonggang Luo <luoyonggang@gmail.com>
Signed-off-by: David Heidelberg <david.heidelberg@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21371>

--- a/src/intel/isl/meson.build
+++ b/src/intel/isl/meson.build
@@ -115,7 +115,7 @@ if with_sse41
     ],
     dependencies : idep_mesautil,
     link_args : ['-Wl,--exclude-libs=ALL'],
-    c_args : [no_override_init_args, '-msse2', sse41_args],
+    c_args : [no_override_init_args, c_sse2_arg, sse41_args],
     gnu_symbol_visibility : 'hidden',
     extra_files : ['isl_tiled_memcpy.c']
   )
