meson: print c_cpp_args
Acked-by: Dylan Baker <dylan@pnwbakers.com>
Reviewed-by: Yonggang Luo <luoyonggang@gmail.com>
Signed-off-by: David Heidelberg <david.heidelberg@collabora.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/21539>

--- a/meson.build
+++ b/meson.build
@@ -2097,6 +2097,13 @@ summary(
 
 summary(
   {
+    'c_cpp_args': c_cpp_args,
+  },
+  section: 'Common C and C++ arguments'
+)
+
+summary(
+  {
     'OpenGL': with_opengl,
     'ES1': with_gles1,
     'ES2': with_gles2,
