--- a/src/panfrost/ci/gitlab-ci.yml
+++ b/src/panfrost/ci/gitlab-ci.yml
@@ -126,7 +126,7 @@ panfrost-g52-gl:arm64:
 panfrost-g52-piglit-gl:arm64:
   extends:
     - .piglit-test
-    - .lava-test:arm64
+    - .lava-piglit:arm64
     - .lava-meson-g12b-a311d-khadas-vim3
   variables:
     HWCI_START_XORG: 1
