broadcom/ci: run gl jobs on arm64, just like vk
These were running on armhf because that's the default in the custom
distro that Raspberry Pi provides, but arm64 is ~20% faster, and we
already run weekly tests on both arm64 & armhf, so let's keep only the
faster one in the pre-merge path.

Signed-off-by: Eric Engestrom <eric@igalia.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/22272>

--- a/src/broadcom/ci/gitlab-ci.yml
+++ b/src/broadcom/ci/gitlab-ci.yml
@@ -17,9 +17,9 @@
   variables:
     BM_BOOTFS: /boot/raspberrypi_armhf
 
-vc4-rpi3-gl:armhf:
+vc4-rpi3-gl:arm64:
   extends:
-    - .broadcom-test:armhf
+    - .broadcom-test:arm64
     - .vc4-rules
   script:
     - ./install/bare-metal/poe-powered.sh
@@ -32,9 +32,9 @@ vc4-rpi3-gl:armhf:
     DEQP_SUITE: broadcom-rpi3
     HWCI_START_WESTON: 1
 
-v3d-rpi4-gl:armhf:
+v3d-rpi4-gl:arm64:
   extends:
-    - .broadcom-test:armhf
+    - .broadcom-test:arm64
     - .v3d-rules
   script:
     - ./install/bare-metal/poe-powered.sh
